--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="icon" href="../src/images/order_logo.png" type="image/icon type">
+    <link rel="icon" href="../src/assets/images/order_logo.png" type="image/icon type">
     <title>Örder</title>
   </head>
   <body>
